MetaBall Duplivert Unwanted Movement Bug #41010

Closed
opened 2014-07-10 00:33:49 +02:00 by Jimmy Gunawan · 14 comments

System Information
Windows 7 64 bit

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error
Dealing with Metaball duplivert, parented to path with build modifier. Metaball keeps moving.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

It's really quite simple: I wanted to duplivert Metaball object, hoping it to create this "grow" kind of look. However, the Metaball result when combined with path + Build Modifier is really weird. The Mesh keeps moving around in 3D space. This should not be the default behaviour, I don't think.

**System Information** Windows 7 64 bit **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** Dealing with Metaball duplivert, parented to path with build modifier. Metaball keeps moving. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps It's really quite simple: I wanted to duplivert Metaball object, hoping it to create this "grow" kind of look. However, the Metaball result when combined with path + Build Modifier is really weird. The Mesh keeps moving around in 3D space. This should not be the default behaviour, I don't think.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BlenderSushiGuy

Added subscriber: @BlenderSushiGuy

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach a .blen file illustrating the issue.

Please always attach a .blen file illustrating the issue.

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm that it gives something weird.
I am surprised that it gives something.
Metaball are not working with duplifaces but within this weird offset with dupliverts.

See attached.blend.
Mball_dupliblend.blend

@BlenderSushiGuy
I recommand you to always use particles for metaball.
It is easy to use a Curve Guide to make them follow a path.
Mball_CurveGuide.blend

I confirm that it gives something weird. I am surprised that it gives something. Metaball are not working with duplifaces but within this weird offset with dupliverts. See attached.blend. [Mball_dupliblend.blend](https://archive.blender.org/developer/F97317/Mball_dupliblend.blend) @BlenderSushiGuy I recommand you to always use particles for metaball. It is easy to use a Curve Guide to make them follow a path. [Mball_CurveGuide.blend](https://archive.blender.org/developer/F97318/Mball_CurveGuide.blend)
Author

@zeauro thanks for the CurveGuide example for Metaballs.

It can be nice to have Metaballs working with Dupliverts. If not too slow that is.

Can I also add snippet weirdness I found about Blender Particles?

When emitted from Vertices, let say just plane with 4 vertices, I am getting Particles emitted from vertices index: 0,0,0,0,1,1,1,1, 2, 2,2,2,3,3,3,3.

Why can't it be more like 0,1,2,3, 0,1,2,3,0,1,2,3.

I am experimenting with Blender Particles and Sverchok. I like more control over the order index.

@zeauro thanks for the CurveGuide example for Metaballs. It can be nice to have Metaballs working with Dupliverts. If not too slow that is. Can I also add snippet weirdness I found about Blender Particles? When emitted from Vertices, let say just plane with 4 vertices, I am getting Particles emitted from vertices index: 0,0,0,0,1,1,1,1, 2, 2,2,2,3,3,3,3. Why can't it be more like 0,1,2,3, 0,1,2,3,0,1,2,3. I am experimenting with Blender Particles and Sverchok. I like more control over the order index.

It adjust amount of particles fora continuous emission from first index to last.
Using index faces, it can be used for desintegration with explode modifier from a side of a mesh to another.
A looped emission would not work well for that.
It would imply that user should be rigourous to create explosion by emetting as much particles than faces in geometry.
And users who do explosions are not rigourous.

I don't know Sverchok.

Originally, a goal of 2.5x particles system implementation should be to offer conversion of caches into action strips that could repeated or mixed.
But it was not reached. Lukas-t is rewriting current particles system implmentation using nodes since 2011.

As a workaround, you can be rigourous and use Trail count. It has a "length in frames" option.
So you can only emit 4 particles in a short time and adjust "length in frames" option according to trail count and emission time.
Of course, trail repetitions are not sensible to physical changes. It is just duplicates of first 4 particles, not real particles.
But lukas' system should be able to do that.

It adjust amount of particles fora continuous emission from first index to last. Using index faces, it can be used for desintegration with explode modifier from a side of a mesh to another. A looped emission would not work well for that. It would imply that user should be rigourous to create explosion by emetting as much particles than faces in geometry. And users who do explosions are not rigourous. I don't know Sverchok. Originally, a goal of 2.5x particles system implementation should be to offer conversion of caches into action strips that could repeated or mixed. But it was not reached. Lukas-t is rewriting current particles system implmentation using nodes since 2011. As a workaround, you can be rigourous and use Trail count. It has a "length in frames" option. So you can only emit 4 particles in a short time and adjust "length in frames" option according to trail count and emission time. Of course, trail repetitions are not sensible to physical changes. It is just duplicates of first 4 particles, not real particles. But lukas' system should be able to do that.
Author

Cheers for hint and suggestion.

Blend example if you tried Sverchok:
https://www.dropbox.com/s/rz5zfa4972p816q/particle_knot_nikolaus.blend

Anyway, trying to get certain Particle emission.

Cheers for hint and suggestion. Blend example if you tried Sverchok: https://www.dropbox.com/s/rz5zfa4972p816q/particle_knot_nikolaus.blend Anyway, trying to get certain Particle emission.

Yet, there are some weird things going on with mballs + dupli… Will try to have a look at it.

Yet, there are some weird things going on with mballs + dupli… Will try to have a look at it.
Bastien Montagne self-assigned this 2014-07-18 14:40:47 +02:00

DevNotes: So far, I have the feeling MBalls make make_child_duplis_cb() being called for each 'virtual' children generated by dupli, instead of just being called once per real child.

Code says everywhere MBalls have specific handling of duplis… funny part is, I can't figure out where it is currently! :P

DevNotes: So far, I have the feeling MBalls make `make_child_duplis_cb()` being called for each 'virtual' children generated by dupli, instead of just being called once per **real** child. Code says everywhere MBalls have specific handling of duplis… funny part is, I can't figure out **where** it is currently! :P

This issue was referenced by e0d8e62f2b

This issue was referenced by e0d8e62f2bb97d75088f7f1fd9f0fab578a02410

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e0d8e62f2b.

Closed by commit e0d8e62f2b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41010
No description provided.